--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
           </button>
         </li>
         <li>
-          Oreos
+         Eggs
           <button class="remove-item btn-link text-red">
             <i class="fa-solid fa-xmark"></i>
           </button>
         </li>
         <li>
-          Milk
+          Eggnog
           <button class="remove-item btn-link text-red">
             <i class="fa-solid fa-xmark"></i>
           </button>
@@ -77,6 +77,7 @@
     </div>
 
     <!-- <script src="./script/script.js"></script> -->
-    <script src="./js/first.js"></script>
+    <!-- <script src="./js/first.js"></script> -->
+    <script src="./js/third.js"></script>
   </body>
 </html>
