--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
 
       <ul id="item-list" class="items">
-        <li>
+        <!-- <li>
           Apples
           <button class="remove-item btn-link text-red">
             <i class="fa-solid fa-xmark"></i>
@@ -60,7 +60,7 @@
           </button>
         </li>
         <li>
-         Eggs
+          Eggs
           <button class="remove-item btn-link text-red">
             <i class="fa-solid fa-xmark"></i>
           </button>
@@ -70,14 +70,14 @@
           <button class="remove-item btn-link text-red">
             <i class="fa-solid fa-xmark"></i>
           </button>
-        </li>
+        </li> -->
       </ul>
 
       <button id="clear" class="btn-clear">Clear All</button>
     </div>
 
     <!-- <script src="./script/script.js"></script> -->
-    <!-- <script src="./js/first.js"></script> -->
-    <script src="./js/third.js"></script>
+    <script src="./js/second.js"></script>
+    <!-- <script src="./js/third.js"></script> -->
   </body>
 </html>
